pythonProject/src/PythonSubsetParser.py
# Generated from src/PythonSubset.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonSubsetParser ( Parser ):

    grammarFileName = "PythonSubset.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'return'", "'if'", "'else'", 
                     "'while'", "'print'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'='", "'('", "')'", "'{'", "'}'", "':'", "','", "'>'", 
                     "'<'", "'=='" ]

    symbolicNames = [ "<INVALID>", "DEF", "RETURN", "IF", "ELSE", "WHILE", 
                      "PRINT", "STRING", "ID", "INT", "COMMENT", "WS", "PLUS", 
                      "MINUS", "MUL", "DIV", "ASSIGN", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "COLON", "COMMA", "GT", "LT", 
                      "EQ" ]

    RULE_program = 0
    RULE_functionDef = 1
    RULE_parameterList = 2
    RULE_statement = 3
    RULE_assignmentStmt = 4
    RULE_printStmt = 5
    RULE_ifStmt = 6
    RULE_whileStmt = 7
    RULE_returnStmt = 8
    RULE_block = 9
    RULE_expression = 10
    RULE_expressionList = 11
    RULE_functionCall = 12

    ruleNames =  [ "program", "functionDef", "parameterList", "statement", 
                   "assignmentStmt", "printStmt", "ifStmt", "whileStmt", 
                   "returnStmt", "block", "expression", "expressionList", 
                   "functionCall" ]

    EOF = Token.EOF
    DEF=1
    RETURN=2
    IF=3
    ELSE=4
    WHILE=5
    PRINT=6
    STRING=7
    ID=8
    INT=9
    COMMENT=10
    WS=11
    PLUS=12
    MINUS=13
    MUL=14
    DIV=15
    ASSIGN=16
    LPAREN=17
    RPAREN=18
    LBRACE=19
    RBRACE=20
    COLON=21
    COMMA=22
    GT=23
    LT=24
    EQ=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonSubsetParser.EOF, 0)

        def functionDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSubsetParser.FunctionDefContext)
            else:
                return self.getTypedRuleContext(PythonSubsetParser.FunctionDefContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSubsetParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonSubsetParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonSubsetParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PythonSubsetParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 524654) != 0):
                self.state = 28
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 26
                    self.functionDef()
                    pass
                elif token in [2, 3, 5, 6, 8, 19]:
                    self.state = 27
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 33
            self.match(PythonSubsetParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PythonSubsetParser.DEF, 0)

        def ID(self):
            return self.getToken(PythonSubsetParser.ID, 0)

        def LPAREN(self):
            return self.getToken(PythonSubsetParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonSubsetParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(PythonSubsetParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(PythonSubsetParser.ParameterListContext,0)


        def getRuleIndex(self):
            return PythonSubsetParser.RULE_functionDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = PythonSubsetParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(PythonSubsetParser.DEF)
            self.state = 36
            self.match(PythonSubsetParser.ID)
            self.state = 37
            self.match(PythonSubsetParser.LPAREN)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 38
                self.parameterList()


            self.state = 41
            self.match(PythonSubsetParser.RPAREN)
            self.state = 42
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSubsetParser.ID)
            else:
                return self.getToken(PythonSubsetParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSubsetParser.COMMA)
            else:
                return self.getToken(PythonSubsetParser.COMMA, i)

        def getRuleIndex(self):
            return PythonSubsetParser.RULE_parameterList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = PythonSubsetParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(PythonSubsetParser.ID)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 45
                self.match(PythonSubsetParser.COMMA)
                self.state = 46
                self.match(PythonSubsetParser.ID)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStmt(self):
            return self.getTypedRuleContext(PythonSubsetParser.AssignmentStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(PythonSubsetParser.PrintStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(PythonSubsetParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(PythonSubsetParser.WhileStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(PythonSubsetParser.ReturnStmtContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(PythonSubsetParser.FunctionCallContext,0)


        def block(self):
            return self.getTypedRuleContext(PythonSubsetParser.BlockContext,0)


        def getRuleIndex(self):
            return PythonSubsetParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PythonSubsetParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.assignmentStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.printStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.ifStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.whileStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.returnStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.functionCall()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 58
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonSubsetParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(PythonSubsetParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(PythonSubsetParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PythonSubsetParser.RULE_assignmentStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStmt" ):
                return visitor.visitAssignmentStmt(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStmt(self):

        localctx = PythonSubsetParser.AssignmentStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignmentStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(PythonSubsetParser.ID)
            self.state = 62
            self.match(PythonSubsetParser.ASSIGN)
            self.state = 63
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(PythonSubsetParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(PythonSubsetParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(PythonSubsetParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(PythonSubsetParser.RPAREN, 0)

        def getRuleIndex(self):
            return PythonSubsetParser.RULE_printStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = PythonSubsetParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(PythonSubsetParser.PRINT)
            self.state = 66
            self.match(PythonSubsetParser.LPAREN)
            self.state = 67
            self.expression(0)
            self.state = 68
            self.match(PythonSubsetParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PythonSubsetParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(PythonSubsetParser.ExpressionContext,0)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSubsetParser.COLON)
            else:
                return self.getToken(PythonSubsetParser.COLON, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSubsetParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonSubsetParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(PythonSubsetParser.ELSE, 0)

        def getRuleIndex(self):
            return PythonSubsetParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = PythonSubsetParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(PythonSubsetParser.IF)
            self.state = 71
            self.expression(0)
            self.state = 72
            self.match(PythonSubsetParser.COLON)
            self.state = 73
            self.statement()
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 74
                self.match(PythonSubsetParser.ELSE)
                self.state = 75
                self.match(PythonSubsetParser.COLON)
                self.state = 76
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PythonSubsetParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(PythonSubsetParser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(PythonSubsetParser.COLON, 0)

        def statement(self):
            return self.getTypedRuleContext(PythonSubsetParser.StatementContext,0)


        def getRuleIndex(self):
            return PythonSubsetParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = PythonSubsetParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(PythonSubsetParser.WHILE)
            self.state = 80
            self.expression(0)
            self.state = 81
            self.match(PythonSubsetParser.COLON)
            self.state = 82
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PythonSubsetParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(PythonSubsetParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PythonSubsetParser.RULE_returnStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = PythonSubsetParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(PythonSubsetParser.RETURN)
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 85
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(PythonSubsetParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PythonSubsetParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSubsetParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonSubsetParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonSubsetParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = PythonSubsetParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(PythonSubsetParser.LBRACE)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 524652) != 0):
                self.state = 89
                self.statement()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self.match(PythonSubsetParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonSubsetParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class FunctionCallExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSubsetParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(PythonSubsetParser.ID, 0)
        def LPAREN(self):
            return self.getToken(PythonSubsetParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(PythonSubsetParser.RPAREN, 0)
        def expressionList(self):
            return self.getTypedRuleContext(PythonSubsetParser.ExpressionListContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallExpr" ):
                return visitor.visitFunctionCallExpr(self)
            else:
                return visitor.visitChildren(self)


    class StringLiteralContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSubsetParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(PythonSubsetParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringLiteral" ):
                return visitor.visitStringLiteral(self)
            else:
                return visitor.visitChildren(self)


    class NumberContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSubsetParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(PythonSubsetParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)


    class MulDivContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSubsetParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSubsetParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PythonSubsetParser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(PythonSubsetParser.MUL, 0)
        def DIV(self):
            return self.getToken(PythonSubsetParser.DIV, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDiv" ):
                return visitor.visitMulDiv(self)
            else:
                return visitor.visitChildren(self)


    class AddSubContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSubsetParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSubsetParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PythonSubsetParser.ExpressionContext,i)

        def PLUS(self):
            return self.getToken(PythonSubsetParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(PythonSubsetParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSub" ):
                return visitor.visitAddSub(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSubsetParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(PythonSubsetParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(PythonSubsetParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(PythonSubsetParser.RPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class RelationalContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSubsetParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSubsetParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PythonSubsetParser.ExpressionContext,i)

        def GT(self):
            return self.getToken(PythonSubsetParser.GT, 0)
        def LT(self):
            return self.getToken(PythonSubsetParser.LT, 0)
        def EQ(self):
            return self.getToken(PythonSubsetParser.EQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelational" ):
                return visitor.visitRelational(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonSubsetParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(PythonSubsetParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PythonSubsetParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = PythonSubsetParser.FunctionCallExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 98
                self.match(PythonSubsetParser.ID)
                self.state = 99
                self.match(PythonSubsetParser.LPAREN)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 131968) != 0):
                    self.state = 100
                    self.expressionList()


                self.state = 103
                self.match(PythonSubsetParser.RPAREN)
                pass

            elif la_ == 2:
                localctx = PythonSubsetParser.StringLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 104
                self.match(PythonSubsetParser.STRING)
                pass

            elif la_ == 3:
                localctx = PythonSubsetParser.NumberContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 105
                self.match(PythonSubsetParser.INT)
                pass

            elif la_ == 4:
                localctx = PythonSubsetParser.IdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 106
                self.match(PythonSubsetParser.ID)
                pass

            elif la_ == 5:
                localctx = PythonSubsetParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 107
                self.match(PythonSubsetParser.LPAREN)
                self.state = 108
                self.expression(0)
                self.state = 109
                self.match(PythonSubsetParser.RPAREN)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 124
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 122
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = PythonSubsetParser.MulDivContext(self, PythonSubsetParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 113
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 114
                        _la = self._input.LA(1)
                        if not(_la==14 or _la==15):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 115
                        self.expression(9)
                        pass

                    elif la_ == 2:
                        localctx = PythonSubsetParser.AddSubContext(self, PythonSubsetParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 116
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 117
                        _la = self._input.LA(1)
                        if not(_la==12 or _la==13):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 118
                        self.expression(8)
                        pass

                    elif la_ == 3:
                        localctx = PythonSubsetParser.RelationalContext(self, PythonSubsetParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 119
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 120
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 58720256) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 121
                        self.expression(7)
                        pass

             
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSubsetParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PythonSubsetParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSubsetParser.COMMA)
            else:
                return self.getToken(PythonSubsetParser.COMMA, i)

        def getRuleIndex(self):
            return PythonSubsetParser.RULE_expressionList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionList" ):
                return visitor.visitExpressionList(self)
            else:
                return visitor.visitChildren(self)




    def expressionList(self):
